major refactor and feature add: added db migrations, added user statistics backend and ui
